kafka-connect/k8s/kafkaconnector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igbi-kafka-connect-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: igbi-kafka-connect-host
  template:
    metadata:
      labels:
        app: igbi-kafka-connect-host
    spec:
      containers:
      - name: igbi-kafka-connect-host
        image: artifactory.tools1-az1.digi.is/epea-docker-local/kafka-connect-base-build:latest
        #image: artifactory.tools1-az1.digi.is/epea-docker-local/ep-kafka-connect:latest
        #image: registry.digi.is/bi-platform-apps/kafka-connect-base-build/master/cp-kafka-connect-base:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            memory: 4Gi
            cpu: 2000m
        ports:
        - name: http
          containerPort: 8080
...
apiVersion: v1
kind: Service
metadata:
  name: igbi-kafka-connect-host
  labels:
    app: igbi-kafka-connect-host
spec:
  type: NodePort
  selector:
    app: igbi-kafka-connect-host
  ports: 
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
